// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"editMode":false} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully created
    </h3>
    <!----> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <!---->
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"editMode":null} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully created
    </h3>
    <!----> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <!---->
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"editMode":true} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully updated
    </h3>
    <!----> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <!---->
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"password":"deepsource","editMode":false} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully created
    </h3>
    <zalert-stub type=\\"warning\\" class=\\"pt-2.5\\">
      <p class=\\"inline-flex items-start gap-x-2.5 leading-6 tracking-snug\\">
        <zicon-stub icon=\\"solid-alert-circle\\" color=\\"honey-500\\" size=\\"base\\"></zicon-stub>
        Please make sure you've copied the password. You would not be able to see it again!
      </p>
    </zalert-stub> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label> <label for=\\"report-password\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Password</p>
      <zinput-stub id=\\"report-password\\" value=\\"deepsource\\" read-only=\\"true\\" placeholder=\\"Report password\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456
Password - deepsource\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"password":"deepsource","editMode":null} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully created
    </h3>
    <zalert-stub type=\\"warning\\" class=\\"pt-2.5\\">
      <p class=\\"inline-flex items-start gap-x-2.5 leading-6 tracking-snug\\">
        <zicon-stub icon=\\"solid-alert-circle\\" color=\\"honey-500\\" size=\\"base\\"></zicon-stub>
        Please make sure you've copied the password. You would not be able to see it again!
      </p>
    </zalert-stub> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label> <label for=\\"report-password\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Password</p>
      <zinput-stub id=\\"report-password\\" value=\\"deepsource\\" read-only=\\"true\\" placeholder=\\"Report password\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456
Password - deepsource\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"password":"deepsource","editMode":true} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully updated
    </h3>
    <zalert-stub type=\\"warning\\" class=\\"pt-2.5\\">
      <p class=\\"inline-flex items-start gap-x-2.5 leading-6 tracking-snug\\">
        <zicon-stub icon=\\"solid-alert-circle\\" color=\\"honey-500\\" size=\\"base\\"></zicon-stub>
        Please make sure you've copied the password. You would not be able to see it again!
      </p>
    </zalert-stub> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label> <label for=\\"report-password\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Password</p>
      <zinput-stub id=\\"report-password\\" value=\\"deepsource\\" read-only=\\"true\\" placeholder=\\"Report password\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456
Password - deepsource\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"password":"deepsource"} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully created
    </h3>
    <zalert-stub type=\\"warning\\" class=\\"pt-2.5\\">
      <p class=\\"inline-flex items-start gap-x-2.5 leading-6 tracking-snug\\">
        <zicon-stub icon=\\"solid-alert-circle\\" color=\\"honey-500\\" size=\\"base\\"></zicon-stub>
        Please make sure you've copied the password. You would not be able to see it again!
      </p>
    </zalert-stub> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label> <label for=\\"report-password\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Password</p>
      <zinput-stub id=\\"report-password\\" value=\\"deepsource\\" read-only=\\"true\\" placeholder=\\"Report password\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456
Password - deepsource\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"password":null,"editMode":false} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully created
    </h3>
    <!----> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <!---->
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"password":null,"editMode":null} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully created
    </h3>
    <!----> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <!---->
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"password":null,"editMode":true} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully updated
    </h3>
    <!----> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <!---->
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {"password":null} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully created
    </h3>
    <!----> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <!---->
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;

exports[`[[ CreateReportSuccess ]] renders CreateReportSuccess with all prop options: {} 1`] = `
"<zdialoggeneric-stub>
  <div class=\\"flex w-98 flex-col gap-y-4 p-4\\">
    <h3 class=\\"text-sm font-medium leading-6 text-vanilla-100\\">
      Report has been successfully created
    </h3>
    <!----> <label for=\\"report-link\\" class=\\"space-y-1.5\\">
      <p class=\\"text-xs font-normal leading-5 text-vanilla-100\\">Report URL</p>
      <zinput-stub id=\\"report-link\\" value=\\"http://localhost/report/123456\\" read-only=\\"true\\" placeholder=\\"Report URL\\" class=\\"border border-ink-200\\"></zinput-stub>
    </label>
    <!---->
    <div>
      <copybutton-stub button-type=\\"link\\" color=\\"vanilla-400\\" icon-color=\\"current\\" icon-size=\\"x-small\\" label=\\"Copy report details\\" succes-label=\\"Report details copied\\" value=\\"View report -
Link - http://localhost/report/123456\\" class=\\"float-left pl-1 hover:text-vanilla-100 hover:no-underline\\"></copybutton-stub>
      <zbutton-stub icon=\\"check\\" size=\\"small\\" label=\\"Done\\" class=\\"float-right\\"></zbutton-stub>
    </div>
  </div>
</zdialoggeneric-stub>"
`;
